--- a/package.json
+++ b/package.json
@@ -1,22 +1,8 @@
 {
   "name": "gpt3-responsive-landing-page",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.23",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-scripts": "5.0.0",
-    "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4"
-  },
+  "author": "Antoine Cheminat",
+  "version": "1.0.0",
+  "license": "ISC",
   "scripts": {
     "dev": "react-scripts start",
     "build": "react-scripts build",
@@ -41,19 +27,20 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@babel/core": "^7.17.8",
-    "@babel/plugin-syntax-flow": "^7.16.7",
-    "@babel/plugin-transform-react-jsx": "^7.17.3",
-    "@testing-library/dom": "^8.13.0",
-    "autoprefixer": "^10.4.4",
-    "postcss": "^8.4.12"
+  "dependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
+    "react-scripts": "5.0.0",
+    "typescript": "^4.6.3"
   },
-  "peerDependencies": {
-    "@babel/core": ">=7.0.0-0 <8.0.0",
+  "devDependencies": {
+    "@babel/core": "^7.0.0-0",
     "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.9",
-    "@testing-library/dom": ">=7.21.4",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
     "autoprefixer": "^10.0.2",
     "postcss": "^8.1.0"
   }
